--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://1000logos.net/wp-content/uploads/2017/03/LinkedIn-Logo.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://www.iconfinder.com/icons/3698244/in_linked_linkedin_linkedin_logo_logo_icon" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
