--- a/templates/index.html
+++ b/templates/index.html
@@ -97,31 +97,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Portfolio/Social Media</h2>
                     <hr class="star-primary">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.chesstastic.com/" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="/static/img/portfolio/chesstastic.jpeg" target="_blank" class="img-responsive" alt="Chesstastic">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.cleverprogrammer.com/" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="/static/img/portfolio/cleverprogrammer.png" class="img-responsive" alt="Slice of cake">
-                    </a>
-                </div>
+            <div class="row">                
                 <div class="col-sm-4 portfolio-item">
                     <a href="https://www.linkedin.com/in/jordan-johnson-0401b2154" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
