--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,17 @@
                     </a>
                 </div>      
             </div>
+            <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <a href="https://github.com/jjohnson3339" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/200px-Octicons-mark-github.svg.png" class="img-responsive" alt="GitHub">
+                    </a>
+                </div>
         </div>
     </section>
 
