--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Social Media</h2>
+                    <h2>Portfolio</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -113,15 +113,8 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://github.com/jjohnson3339" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/200px-Octicons-mark-github.svg.png" class="img-responsive" alt="GitHub">
-                    </a>
-                </div>
+                    <script src="https://anvil.works/embed.js" async></script>
+<iframe style="width:100%;" data-anvil-embed src="https://TV4TQPRHSZB7HAMG.anvil.app/MEKDPK35PFI6WGBJTJGHQ4WQ"></iframe>
             </div>
         </div>
     </section>
@@ -174,7 +167,7 @@
                                 <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" class="btn-social btn-outline" target="_blank"><span class="sr-only">YouTube</span><i class="fa fa-fw fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/CleverProgrammer" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/jjohnson3339" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -186,7 +179,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Clever Programmer - CP Flask Portfolio 2017 - Created on C9
+                        Copyright &copy; Clever Programmer - CP Flask Portfolio 2020 - Created on C9
                     </div>
                 </div>
             </div>
